# api/org-unit-role.pb.route.go
@@ -16,4 +16,39 @@ func init() {
 	route.Scopes = append(route.Scopes, "ou")
 	route.Verb = "list"
 	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
+
+	// Adding Route information for CreateCustomRole RPC
+	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles", "POST")
+	route.Resource = "org-unit-custom-role"
+	route.Scopes = append(route.Scopes, "ou")
+	route.Verb = "create"
+	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
+
+	// Adding Route information for UpdateCustomRole RPC
+	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles/{roleName}", "PUT")
+	route.Resource = "org-unit-custom-role"
+	route.Scopes = append(route.Scopes, "ou")
+	route.Verb = "update"
+	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
+
+	// Adding Route information for GetCustomRole RPC
+	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles/{roleName}", "GET")
+	route.Resource = "org-unit-custom-role"
+	route.Scopes = append(route.Scopes, "ou")
+	route.Verb = "get"
+	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
+
+	// Adding Route information for DeleteCustomRole RPC
+	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles/{roleName}", "DELETE")
+	route.Resource = "org-unit-custom-role"
+	route.Scopes = append(route.Scopes, "ou")
+	route.Verb = "delete"
+	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
+
+	// Adding Route information for ListCustomRoles RPC
+	route = model.NewRoute("/api/auth/v1/ou/{ou}/custom-roles", "GET")
+	route.Resource = "org-unit-custom-role"
+	route.Scopes = append(route.Scopes, "ou")
+	route.Verb = "list"
+	RoutesOrgUnitRole = append(RoutesOrgUnitRole, route)
 }
